<resources>
    <string name="app_name">VISION</string>
    <string name="work_under_progress">Work Under Progress</string>
    <string name="your_name">Name</string>
    <string name="signup_image">SignUp Image</string>
    <string name="contact_number">Contact Number</string>
    <string name="d_o_b">Date Of Birth</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="splash_image">Splash Image</string>
    <string name="productivity_starts_with_a_plan">Productivity starts with a vision</string>
    <string name="add_checklist">Add Checklist</string>
    <string name="add_new_task_dialog_title">Add New Task</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_completion_date">Completion Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="page_viewer_image">page viewer image</string>
    <string name="skip">Skip</string>
    <string name="task">Task</string>
    <string name="finish">Finish</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="tick">tick</string>
    <string name="filter">filter</string>
    <string name="circle">circle</string>
    <string name="done_button">Done Button</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="tab_layout">Tab layout</string>
    <string name="view_pager_image">View Pager Image</string>
    <string name="title_activity_demo_compose">DemoCompose</string>
    <string name="toolbarTitle">Username</string>
    <string name="sort">sort</string>
    <string name="Add">ADD TASK</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>