<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".location.activity.LocationActivity">

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_marginTop="50dp"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="180dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/state"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/city"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <TextView
            android:id="@+id/postalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/postal_code"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitudeTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/latitude"
                android:textSize="25dp"
                android:textStyle="bold"
                tools:ignore="SpUsage,TextSizeCheck" />

            <TextView
                android:id="@+id/longitudeTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="25dp"
                android:textStyle="bold"
                tools:ignore="SpUsage,TextSizeCheck" />

        </LinearLayout>

    </LinearLayout>

</layout>
