<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".SigningUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="154dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="117dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_up"
        android:contentDescription="@string/signup_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameText1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@color/light"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/users"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:hint="@string/your_name"
            android:textCursorDrawable="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberText1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="106dp"
        android:background="@color/light"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText1"
        android:autofillHints=""
        android:inputType="phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:drawableLeft="@drawable/phone"
            android:textCursorDrawable="@color/black"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dobText1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="104dp"
        android:background="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberText1"
        android:textColorHint="#000000"
        android:autofillHints=""
        android:inputType="date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dobText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/d_o_b"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/calenders"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textCursorDrawable="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>