<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.TaskFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneBtn"
        style="@style/Button.Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        app:strokeColor="@color/blue_grotto"
        app:strokeWidth="2dp"
        android:backgroundTint="@color/blue_grotto"
        android:text="@string/Add"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:hintTextColor="@color/blue_grotto"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/blue_grotto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium_italic"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="1"
            android:textColor="@color/blue_grotto"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        app:hintTextColor="@color/blue_grotto"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/blue_grotto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium_italic"
            android:gravity="top"
            android:lines="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/blue_grotto"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_of_completion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/blue_grotto"
        android:textAlignment="center"
        app:startIconDrawable="@drawable/calender_black"
        app:startIconTint="@color/blue_grotto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberText1"
        android:textColorHint="@color/blue_grotto"
        android:autofillHints=""
        android:inputType="date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_of_completion_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/montserrat_medium_italic"
            android:gravity="center_horizontal"
            android:hint="@string/task_completion_date"
            android:textColor="@color/blue_grotto" />

    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>
</layout>